[tool.poetry]
name = "vital"
version = "0.2.0"
description = ""
authors = ["maitham <maitham@tryvital.io>"]
license = "GNU"
readme = "README.rst"
homepage = "https://github.com/adeptlabs/vital-python"
repository = "https://github.com/adeptlabs/vital-python"
keywords = ["vital", "tryvital", "python"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "^2.0.1"
arrow = "*"
auth0-python = "*"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
