[tool.poetry]
name = "vital"
version = "1.3.3"
description = ""
authors = ["maitham <maitham@tryvital.io>"]
license = "GNU"
readme = "README.md"
homepage = "https://github.com/adeptlabs/vital-python"
repository = "https://github.com/adeptlabs/vital-python"
keywords = ["vital", "tryvital", "python"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "^2.0.1"
arrow = "*"
requests = "*"
importlib-metadata = "^3.7.3"
svix = "^0.41.2"
typed-ast="^1.5.4"
black = "^22.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.990"
black =  "^22.6.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.2"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
ensure_newline_before_comments=true